# zap

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  release.sh
.github/workflows/: release.yml
src/: devtools.rs  main.rs  update.rs
src/backend/: apt.rs  aur.rs  bootstrap.rs  brew.rs  cargo.rs  choco.rs  deno.rs  detect.rs  dnf.rs  dockerhub.rs  flatpak.rs  go.rs  mod.rs  multi.rs  npm.rs  pacman.rs  pip.rs  pkg.rs  pub.rs  scoop.rs  snap.rs  sudo.rs  winget.rs  zsh.rs  zypper.rs
src/ui/: mod.rs
