[package]
name = "zap"
version = "0.0.4"
edition = "2021"
description = "A fast, cross-platform universal package manager"
authors = ["nees"]

[dependencies]
# CLI and TUI
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Caching (embedded database)
sled = "0.34"

# Parallel processing
rayon = "1.10"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
semver = "1.0"

# Misc utilities
directories = "5.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.1"

# Archive handling
tar = "0.4"
flate2 = "1.0"

# Password handling
rpassword = "7.3"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
